<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 1</string>
    <string name="app_bar_title">Lab 1</string>
    <string name="responsive_title">Responsive Layout 1</string>
    <string name="block_this">This</string>
    <string name="block_is">is</string>
    <string name="block_my">my</string>
    <string name="block_first">first</string>
    <string name="android_application">Android Application</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
</resources>
